--- a/14_multiple(2)/14_multiple(2).csproj
+++ b/14_multiple(2)/14_multiple(2).csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_12_multiplicity_remains</RootNamespace>
+    <RootNamespace>_14_multiple_2_</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
