--- a/16_square_of_number/16_square_of_number.csproj
+++ b/16_square_of_number/16_square_of_number.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_14_multiple_2_</RootNamespace>
+    <RootNamespace>_16_square_of_number</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
