--- a/21_distance_in_3d/21_distance_in_3d.csproj
+++ b/21_distance_in_3d/21_distance_in_3d.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_23_cube_up_to_N</RootNamespace>
+    <RootNamespace>_21_distance_in_3d</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
